# mobile_manipulator_motion_planner

./: CMakeLists.txt  Controller.h  Main.cpp  README.md  ROS_bridge.hpp  RRT_planner.cpp  out.urdf  package.xml  panda_arm_RRT.xacro  panda_with_stefan.ttt  path_result_ex1.txt  path_result_table_ex1.txt  rotation_matrix.m  util.h
include/: NHRRT_planner.h  ROS_bridge.hpp  RRT_planner.h  controller.h  util.h
launch/: demo.launch
src/: Controller.cpp  NHRRT_planner.cpp  ROS_bridge.cpp  RRT_planner.cpp  controller.cpp  main.cpp  traj.cpp  util.cpp
